ReactApp-Manifests/green/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app
  namespace: green
  labels:
    app: react-app
    env: green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: react-app
      env: green
  template:
    metadata:
      labels:
        app: react-app
        env: green
    spec:
      containers:
      - name: react-app
        image: surendradev101/react-app:c23ae291ff9f68224f8464d981df90e42e1d9a9e
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "500m"
            memory: "256Mi"
          requests:
            cpu: "250m"
            memory: "128Mi"
