ReactApp-Manifests/green/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-app
  namespace: green
  labels:
    app: react-app
    env: green
spec:
  selector:
    app: react-app
    env: green
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
